--- a/prometheus.yml
+++ b/prometheus.yml
@@ -44,3 +44,8 @@ scrape_configs:
   static_configs:
     - targets:
       - '127.0.0.1:9090'
+
+- job_name: 'Sensors'
+  static_configs:
+    - targets:
+      - '192.168.1.110:9255'
